This is the Changelog for GregTech6-Unofficial
6.14.10: (Not released yet).
Nothing

6.14.09: (Not released yet).
Nothing

6.14.08: (Not released yet).
Nothing

6.14.07: (Not released yet).
Nothing

6.14.06: (Not released yet).
Nothing

6.14.05: (Not released yet).
[FIXED] Perforated Bushing having wrong material information.
[CHANGED] Increased the yield of Epoxid Resin and Photoresist production

6.14.04:
[NOTE] This is not a really important update, just for the hotfix. I will not merge GT6 until the Asmization is tested with some time.
[FIXED] MacOs File System causes some config files to reset during launch.

6.14.03:
[COMPAT] When TerraFirmaCraft or TerraFirmaCraft Plus is loaded, the heat, electric, and chemical damage is accommodated.
[FIXED] Titanium not showing up in NEI.
[FIXED] Biochemical Research Lab cannot form in some direction of facing.
[FIXED] Fermenting recipe conflicts.
[CHANGED] Less time is now required to incubate the biomass-origin bacterias.

6.14.02:
[NOTE] This is a quite major update, read the changelog before update is recommended...
[MERGED] Merged official branch 6.13.02
- 6.13.02:
- [COMPAT] HBM Nuclear Tech has some more Compatiblity Data attached to it. Mainly Shelf Data. The Alloys it has are a little bit too weird.
- [COMPAT] HEXCrafts Hexorium Ore is generated in all possible ways when installed, with RGB ones closer to Surface and Black and White ones closer to Bedrock. Also some Hexorium related Recipes added. Its Energized Monoliths can also be found as Decoration in GT Dungeons.
- [FIXED] A weird Interaction with Robot Arms and Extenders that resulted in Extenders sometimes choosing the secondary Facing as destination for Items, even though the Items did not come from the promary Facing, including targetting things like GT6 Red Alloy Wires that dont even have Slots to put shit into, resulting in a Crash of the Block that has the Robot Arm.