@@ -21,8 +21,6 @@ package gregtech.loaders.b;
 
 import static gregapi.data.CS.*;
 
-import static gregapi.data.MT.VanadiumGallium;
-
 import gregapi.block.MaterialMachines;
 import gregapi.block.MaterialScoopable;
 import gregapi.block.multitileentity.MultiTileEntityBlock;
@@ -1036,7 +1034,7 @@ public class Loader_MultiTileEntities implements Runnable {
 		IL.Battery_LiCoO2_MV            .set(aRegistry.add("Lithium-Cobalt Battery ("+VN[2]+")"             , "Batteries"                           , 14032, 14013, MultiTileEntityBatteryAdvEU128 .class   , 0, 16, aUtilMetal , UT.NBT.make(NBT_HARDNESS,   0.5F, NBT_RESISTANCE,   3.0F, NBT_COLOR, DYES_INT[DYE_INDEX_Blue]                       , NBT_INPUT, V[2], NBT_CAPACITY, V[2] *  64000, NBT_ENERGY_ACCEPTED, TD.Energy.EU), "WxW", "BCB", "PBP", 'P', OP.plate.dat(MT.BatteryAlloy), 'B', IL.Battery_LiCoO2_Cell_Filled, 'W', MT.DATA.CABLES_01[2], 'C', OD_CIRCUITS[4]), null, "gt:re-battery2");
 		IL.Battery_LiCoO2_HV            .set(aRegistry.add("Lithium-Cobalt Battery ("+VN[3]+")"             , "Batteries"                           , 14033, 14013, MultiTileEntityBatteryAdvEU512 .class   , 0, 16, aUtilMetal , UT.NBT.make(NBT_HARDNESS,   0.5F, NBT_RESISTANCE,   3.0F, NBT_COLOR, DYES_INT[DYE_INDEX_Blue]                       , NBT_INPUT, V[3], NBT_CAPACITY, V[3] *  64000, NBT_ENERGY_ACCEPTED, TD.Energy.EU), "WxW", "BCB", "BPB", 'P', OP.plate.dat(MT.BatteryAlloy), 'B', IL.Battery_LiCoO2_Cell_Filled, 'W', MT.DATA.CABLES_01[3], 'C', OD_CIRCUITS[5]), null, "gt:re-battery3");
 		IL.Battery_LiCoO2_EV            .set(aRegistry.add("Lithium-Cobalt Battery ("+VN[4]+")"             , "Batteries"                           , 14034, 14013, MultiTileEntityBatteryAdvEU2048.class   , 0, 16, aUtilMetal , UT.NBT.make(NBT_HARDNESS,   0.5F, NBT_RESISTANCE,   3.0F, NBT_COLOR, DYES_INT[DYE_INDEX_Blue]                       , NBT_INPUT, V[4], NBT_CAPACITY, V[4] *  64000, NBT_ENERGY_ACCEPTED, TD.Energy.EU), "WPW", "BCB", "BBB", 'P', OP.plate.dat(MT.BatteryAlloy), 'B', IL.Battery_LiCoO2_Cell_Filled, 'W', MT.DATA.CABLES_01[4], 'C', OD_CIRCUITS[6]), null, "gt:re-battery4");
-		IL.Battery_LiCoO2_IV            .set(aRegistry.add("Lithium-Cobalt Battery ("+VN[5]+")"             , "Batteries"                           , 14035, 14013, MultiTileEntityBatteryAdvEU8192.class   , 0, 16, aUtilMetal , UT.NBT.make(NBT_HARDNESS,   0.5F, NBT_RESISTANCE,   3.0F, NBT_COLOR, DYES_INT[DYE_INDEX_Blue]                       , NBT_INPUT, V[5], NBT_CAPACITY, V[5] *  64000, NBT_ENERGY_ACCEPTED, TD.Energy.EU))); RM.Welder.addRecipeX(T, 64, 1000, ST.array(OP.plateDouble.mat(MT.BatteryAlloy, 4), IL.Battery_LiCoO2_Cell_Filled.get(8), IL.Circuit_Ultimate.get(1), OP.cableGt02.mat(MT.Pt, 2)), FL.array(FL.Coolant_IC2.make(1000)), ZL_FS, ST.array(IL.Battery_LiCoO2_IV.get(1)));
+		IL.Battery_LiCoO2_IV            .set(aRegistry.add("Lithium-Cobalt Battery ("+VN[5]+")"             , "Batteries"                           , 14035, 14013, MultiTileEntityBatteryAdvEU8192.class   , 0, 16, aUtilMetal , UT.NBT.make(NBT_HARDNESS,   0.5F, NBT_RESISTANCE,   3.0F, NBT_COLOR, DYES_INT[DYE_INDEX_Blue]                       , NBT_INPUT, V[5], NBT_CAPACITY, V[5] *  64000, NBT_ENERGY_ACCEPTED, TD.Energy.EU))); //RM.Welder.addRecipeX(T, 64, 1000, ST.array(OP.plateDouble.mat(MT.BatteryAlloy, 4), IL.Battery_LiCoO2_Cell_Filled.get(8), IL.Circuit_Ultimate.get(1), OP.cableGt02.mat(MT.Pt, 2)), FL.array(FL.Coolant_IC2.make(1000)), ZL_FS, ST.array(IL.Battery_LiCoO2_IV.get(1)));
 
 		IL.Battery_RE_LV_Lithium.set(IL.Battery_LiCoO2_LV.get(1));
 		IL.Battery_RE_MV_Lithium.set(IL.Battery_LiCoO2_MV.get(1));
@@ -1279,7 +1277,7 @@ public class Loader_MultiTileEntities implements Runnable {
 		aMat = MT.PTFE;                 aRegistry.add("Biochemical Research Lab"                            , "Multiblock Machines", 17127, 17101, MultiTileEntityBiolab.class              , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  10.0F, NBT_RESISTANCE,  10.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "biolab"                  , NBT_INPUT,  128, NBT_INPUT_MIN,  128, NBT_INPUT_MAX,     8192                       , NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_RECIPEMAP, RM.BioLab               , NBT_ENERGY_ACCEPTED_2, TD.Energy.LU, NBT_SPECIAL_IS_START_ENERGY, T, NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  16, NBT_PARALLEL_DURATION, T),  "GGG", "SwS", "RMC", 'M', aRegistry.getItem(18119), 'R', IL.Processor_Crystal_Ruby, 'C', IL.Precision_Manipulator, 'G', OP.wireGt02.dat(MT.Iridium), 'S', OP.stickLong.dat(MT.Iridium));
 		aMat = MT.TungstenCarbide;      aRegistry.add("Large Crystallisation Crucible"                      , "Multiblock Machines", 17128, 17101, MultiTileEntityCrystallisationCrucible.class , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  12.0F, NBT_RESISTANCE,  12.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largecrystallisationcrucible" , NBT_INPUT, 2048, NBT_INPUT_MIN,  512, NBT_INPUT_MAX,    16384                       , NBT_ENERGY_ACCEPTED, TD.Energy.HU, NBT_RECIPEMAP, RM.CrystallisationCrucible, NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                        ), "PPP", "PwP", "CMC", 'M', aRegistry.getItem(18035), 'C', OD_CIRCUITS[4], 'P', OP.plateDense.dat(aMat));
 		aMat = MT.TungstenCarbide;      aRegistry.add("Large Extruder"                                      , "Multiblock Machines", 17129, 17101, MultiTileEntityExtruder.class            , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  12.0F, NBT_RESISTANCE,  12.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largeextruder"           , NBT_INPUT, 2048, NBT_INPUT_MIN,  512, NBT_INPUT_MAX,    32768, NBT_EFFICIENCY,  5000, NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_RECIPEMAP, RM.Extruder             , NBT_INV_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_TANK_SIDE_AUTO_OUT, SIDE_BOTTOM, NBT_CHEAP_OVERCLOCKING, T, NBT_PARALLEL,  64, NBT_PARALLEL_DURATION, T                          ), "CMC", "PwP", "PPP", 'M', aRegistry.getItem(18035), 'C', OD_CIRCUITS[4], 'P', OP.plateDense.dat(aMat));
-		aMat = MT.TitaniumAluminide;    aRegistry.add("Flywheel Controller"                                 , "Multiblock Machines", 17130, 17101, MultiTileEntityFlywheel.class            , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  12.0F, NBT_RESISTANCE,  12.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "lightningrod"            , NBT_DESIGN, 18022, NBT_INPUT,   4096, NBT_OUTPUT,        4096, NBT_WASTE_ENERGY, T, NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_ENERGY_EMITTED, TD.Energy.EU), "CMC", "PwP", "PCP", 'M', aRegistry.getItem(18035), 'C', OD_CIRCUITS[4], 'P', OP.plateDense.dat(aMat));
+		aMat = MT.TitaniumAluminide;    aRegistry.add("Multiblock Energy Storage Unit"                      , "Multiblock Machines", 17130, 17101, MultiTileEntityEnergyStation.class            , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,  12.0F, NBT_RESISTANCE,  12.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "lightningrod"       , NBT_INPUT, 4096, NBT_OUTPUT,    4096, NBT_WASTE_ENERGY, T, NBT_ENERGY_ACCEPTED, TD.Energy.EU, NBT_ENERGY_EMITTED, TD.Energy.EU), "CMC", "PwP", "PCP", 'M', aRegistry.getItem(18035), 'C', OD_CIRCUITS[4], 'P', OP.plateDense.dat(aMat));
 
 
         aMat = MT.TungstenSteel;        aRegistry.add("Large Heat Exchanger(TungstenSteel)"                 , "Multiblock Machines", 18301, 17101, MultiTileEntityLargeHeatExchanger.class  , aMat.mToolQuality, 16, aMachine   , UT.NBT.make(NBT_MATERIAL, aMat, NBT_HARDNESS,   6.0F, NBT_RESISTANCE,   6.0F, NBT_COLOR, UT.Code.getRGBInt(aMat.fRGBaSolid), NBT_TEXTURE, "largeheatexchanger"      , NBT_DESIGN, 18109, NBT_OUTPUT, 16384, NBT_FUELMAP, FM.Hot, NBT_ENERGY_EMITTED, TD.Energy.HU), "DDD", "PMP", "DDD", 'M', aRegistry.getItem(18023), 'D', OP.plateDense.dat(MT.AnnealedCopper), 'P', OP.pipeHuge.dat(ANY.Cu));
