@@ -5,41 +5,38 @@ import gregapi.tileentity.ITileEntityUnloadable;
 import gregapi.tileentity.multiblocks.ITileEntityMultiBlockController;
 import gregapi.tileentity.multiblocks.MultiTileEntityMultiBlockPart;
 import gregapi.tileentity.multiblocks.TileEntityBase11MultiBlockEnergyStorage;
-import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.tileentity.TileEntity;
+
+import java.util.List;
 
 import static gregapi.data.CS.*;
 
 /**
  * @author YueSha
  */
-public class MultiTileEntityFlywheel extends TileEntityBase11MultiBlockEnergyStorage {
+public class MultiTileEntityEnergyStation extends TileEntityBase11MultiBlockEnergyStorage {
 
     MultiTileEntityRegistry tRegistry = MultiTileEntityRegistry.getRegistry("gt.multitileentity");
 
-    public short mBatteryCore = 18022;
+    public short mBatteryCasing = 18022;
+
+    public short[] mBatteryCores = {18040,18041,18042,18043,18044,18045};
 
     public int mCoreLength = 1;
 
-    public int mSyncLength;
+    public int mSyncLength = 1;
 
-    @Override
-    public void readFromNBT2(NBTTagCompound aNBT) {
-        super.readFromNBT2(aNBT);
-        if (aNBT.hasKey(NBT_DESIGN)) mBatteryCore = aNBT.getShort(NBT_DESIGN);
-    }
+    public byte mSyncBatteryCoreType = 0;
 
-    @Override
-    public void writeToNBT2(NBTTagCompound aNBT) {
-        super.writeToNBT2(aNBT);
-    }
+    public long mSyncBatteryCoreCapacity = 0;
 
     @Override
     public boolean checkStructure2() {
 
-        for (int mLength = 1; mLength <= 8; mLength++) {
-            System.out.println("mLength=" + mLength);
-            System.out.println("CoreLength="+mCoreLength);
+        for (int mLength = 1; mLength <= 8; mLength++)  for (byte i = 0; i <=5; i++) {
+
+            short mBatteryCore = mBatteryCores[i];
+
             int
                     tMinX = xCoord-(SIDE_X_NEG==mFacing?0:SIDE_X_POS==mFacing?mCoreLength+1:1),
                     tMinY = yCoord-(SIDE_Y_NEG==mFacing?0:SIDE_Y_POS==mFacing?mCoreLength+1:1),
@@ -52,11 +49,11 @@ public class MultiTileEntityFlywheel extends TileEntityBase11MultiBlockEnergySto
                     tOutZ = getOffsetZN(mFacing, mCoreLength+1);
 
             if (worldObj.blockExists(tMinX, tMinY, tMinZ) && worldObj.blockExists(tMaxX, tMaxY, tMaxZ)) {
-                System.out.println("Block Exists!");
                 mEmitter = null;
                 boolean tSuccess = T;
                 for (int tX = tMinX; tX <= tMaxX; tX++) for (int tY = tMinY; tY <= tMaxY; tY++) for (int tZ = tMinZ; tZ <= tMaxZ; tZ++) {
-                    if (!ITileEntityMultiBlockController.Util.checkAndSetTarget(this, tX, tY, tZ, (SIDES_AXIS_X[mFacing] ? tX != tMinX && tX != tMaxX : SIDES_AXIS_Z[mFacing] ? tZ != tMinZ && tZ != tMaxZ : tY != tMinY && tY != tMaxY) ? 18040 : mBatteryCore, getMultiTileEntityRegistryID(), tX == tOutX && tY == tOutY && tZ == tOutZ ? 2 : 0, tX == tOutX && tY == tOutY && tZ == tOutZ ? MultiTileEntityMultiBlockPart.ONLY_ENERGY_IN : MultiTileEntityMultiBlockPart.NOTHING)) tSuccess = F;
+
+                    if (!ITileEntityMultiBlockController.Util.checkAndSetTarget(this, tX, tY, tZ, (SIDES_AXIS_X[mFacing] ? tX != tMinX && tX != tMaxX : SIDES_AXIS_Z[mFacing] ? tZ != tMinZ && tZ != tMaxZ : tY != tMinY && tY != tMaxY) ? mBatteryCore : mBatteryCasing, getMultiTileEntityRegistryID(), tX == tOutX && tY == tOutY && tZ == tOutZ ? 2 : 0, tX == tOutX && tY == tOutY && tZ == tOutZ ? MultiTileEntityMultiBlockPart.ONLY_ENERGY_IN : MultiTileEntityMultiBlockPart.NOTHING)) tSuccess = F;
                 }
 
                 if (!tSuccess) {
@@ -64,18 +61,21 @@ public class MultiTileEntityFlywheel extends TileEntityBase11MultiBlockEnergySto
                     else {mCoreLength = mLength + 1;}
                     continue;
                 } else {
-                    mSyncLength = mLength;
+                    mSyncBatteryCoreType = i;
+                    mSyncLength = mCoreLength;
+
+                    mSyncBatteryCoreCapacity = this.getBatteryCoreCapacity();
+                    mStorage.mCapacity = mSyncLength*9*mSyncBatteryCoreCapacity;
+                    mEnergyIN.mRec = mEnergyOUT.mRec = this.getBatteryInputVoltage();
+                    mEnergyIN.mMax = mEnergyOUT.mMax = this.getBatteryInputVoltage()*2;
+                    mEnergyOUT.mMin = this.getBatteryInputVoltage();
                 }
+
                 return tSuccess;
             }
             return mStructureOkay;
         }
         return F;
-    }
-
-    @Override
-    public long getDynamicCapacity() {
-        return (long) mSyncLength * 100000000;
     }
 
     @Override
@@ -93,6 +93,42 @@ public class MultiTileEntityFlywheel extends TileEntityBase11MultiBlockEnergySto
             return result;
         }
         return result;
+    }
+
+    @Override
+    public void onMagnifyingGlass2(List<String> aChatReturn) {
+        super.onMagnifyingGlass2(aChatReturn);
+        String mBatteryCoreName = this.getBatteryCoreName();
+        aChatReturn.add("Battery Core: " + mBatteryCoreName);
+        aChatReturn.add("Voltage Level: " + mEnergyOUT.mRec);
+    }
+
+    public String getBatteryCoreName() {
+        switch(mSyncBatteryCoreType) {
+            case 0: return "Core 1";
+            case 1: return "Core 2";
+            case 2: return "Core 3";
+            case 3: return "Core 4";
+            case 4: return "Core 5";
+            case 5: return "Core 6";
+        }
+        return "No Battery Core!";
+    }
+
+    public long getBatteryCoreCapacity() {
+        switch(mSyncBatteryCoreType) {
+            case 0: return V[0]*512000;
+            case 1: return V[1]*512000;
+            case 2: return V[2]*512000;
+            case 3: return V[3]*512000;
+            case 4: return V[4]*512000;
+            case 5: return V[5]*512000;
+        }
+        return 0;
+    }
+
+    public long getBatteryInputVoltage() {
+        return mSyncLength*2048;
     }
 
     public ITileEntityUnloadable mEmitter = null;
@@ -134,6 +170,6 @@ public class MultiTileEntityFlywheel extends TileEntityBase11MultiBlockEnergySto
 
     @Override
     public String getTileEntityName() {
-        return "gt.multitileentity.multiblock.flywheel";
+        return "gt.multitileentity.multiblock.energystation";
     }
 }
